# skillgap

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_jobs.py  test_pdf.py
data/jobs/: jobs.json
src/skillgap/analytics/: readiness.py  recommendation_confidence.py  skill_correlation.py  skill_frequency.py
src/skillgap/api/: main.py
src/skillgap/dashboard/: app.js  index.html  styles.css
src/skillgap/knowledge/: courses.json
src/skillgap/models/: job.py  job_schema.py  resume.py  resume_schema.py
src/skillgap/providers/jobs/: adzuna_provider.py  arbeitnow_provider.py  base_provider.py  findwork_provider.py  himalayas_provider.py  provider_manager.py  remoteok_provider.py  remotive_provider.py  weworkremotely_provider.py
src/skillgap/services/: ai_prompts.py  ai_service.py  job_scraper_service.py  pdf_service.py  resume_mapper.py  resume_service.py
src/skillgap/services/jobs/: job_aggregator_service.py  job_deduplicator.py  job_skill_extraction_service.py
src/skillgap/services/matching/: skill_gap_service.py
src/skillgap/services/recommendations/: course_service.py
tests/: test_analytics.py
tools/: build_market_dataset.py
