[project]
name = "skillgap"
version = "0.1.0"
description = "AI-powered career intelligence platform"
authors = [{ name = "Mervyn Simons" }]
requires-python = ">=3.12"

dependencies = [
    "groq>=1.5.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.10",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillgap"]